<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.glechyk.gram.delta.authFeature.impl.presentation.screen.signup.birthday.BirthdayFragment">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/back"
        android:paddingVertical="14dp"
        android:paddingEnd="36dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/bold.title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/enter_your_birthday_screen_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionTextView"
        style="@style/regular.footnote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/enter_your_birthday_screen_description_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthdayTextInputLayout"
        style="@style/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/enter_your_birthday_screen_hint"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthdayTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:textAppearance="@style/regular.caption1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/description2TextView"
        style="@style/regular.caption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/enter_your_birthday_screen_description_2"
        android:textColor="@color/black_45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthdayTextInputLayout" />

    <com.glechyk.gram.delta.uikit.ProgressButton
        android:id="@+id/progressButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/description2TextView"
        app:textProgressButton="@string/next" />

</androidx.constraintlayout.widget.ConstraintLayout>
