<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.glechyk.gram.delta.authFeature.impl.presentation.screen.signup.password.PasswordFragment">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/back"
        android:paddingVertical="14dp"
        android:paddingEnd="36dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleTextView"
        style="@style/bold.title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/password_screen_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterPasswordInputLayout"
        style="@style/input_text.password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/password_screen_enter_password"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterPasswordEditText"
            style="@style/regular.caption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/minCharTextView"
        style="@style/regular.caption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_password_success"
        android:drawablePadding="5dp"
        android:text="@string/password_screen_8_characters"
        android:textColor="@color/black_45"
        app:drawableTint="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordInputLayout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/uppercaseTextView"
        style="@style/regular.caption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_password_success"
        android:drawablePadding="5dp"
        android:text="@string/password_screen_1_uppercase"
        android:textColor="@color/black_45"
        app:drawableTint="@color/transparent"
        app:layout_constraintStart_toEndOf="@id/minCharTextView"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordInputLayout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lowercaseTextView"
        style="@style/regular.caption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_password_success"
        android:drawablePadding="5dp"
        android:text="@string/password_screen_1_lowercase"
        android:textColor="@color/black_45"
        app:drawableTint="@color/transparent"
        app:layout_constraintStart_toEndOf="@id/uppercaseTextView"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordInputLayout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/digitTextView"
        style="@style/regular.caption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawableEnd="@drawable/ic_password_success"
        android:drawablePadding="5dp"
        android:text="@string/password_screen_1_digit"
        android:textColor="@color/black_45"
        app:drawableTint="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minCharTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/specCharTextView"
        style="@style/regular.caption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:drawableEnd="@drawable/ic_password_success"
        android:drawablePadding="5dp"
        android:text="@string/password_screen_1_special_character"
        android:textColor="@color/black_45"
        app:drawableTint="@color/transparent"
        app:layout_constraintStart_toEndOf="@id/digitTextView"
        app:layout_constraintTop_toBottomOf="@+id/minCharTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordInputLayout"
        style="@style/input_text.password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password_screen_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/digitTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordEditText"
            style="@style/regular.caption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.glechyk.gram.delta.uikit.ProgressButton
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordInputLayout"
        app:textProgressButton="@string/next" />

</androidx.constraintlayout.widget.ConstraintLayout>
