<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.glechyk.gram.delta.authFeature.impl.presentation.screen.signup.nickname.NicknameFragment">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/back"
        android:paddingVertical="14dp"
        android:paddingEnd="36dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/bold.title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/nickname_screen_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionTextView"
        style="@style/regular.footnote"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/nickname_screen_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nicknameTextInputLayout"
        style="@style/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/nickname_screen_hint"
        app:endIconTint="@color/success_green"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nicknameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="@style/regular.caption1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.glechyk.gram.delta.uikit.ProgressButton
        android:id="@+id/progressButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/nicknameTextInputLayout"
        app:textProgressButton="@string/next" />

</androidx.constraintlayout.widget.ConstraintLayout>
