<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleDialogTextView"
        style="@style/bold.subHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/network_validation_error_login_incorrect"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/messageDialogTextView"
        style="@style/regular.caption1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/network_validation_error_login_alert_message"
        android:textColor="@color/black_65"
        app:layout_constraintTop_toBottomOf="@+id/titleDialogTextView" />

    <View
        android:id="@+id/horizontalLineDialogView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/black_10"
        app:layout_constraintTop_toBottomOf="@+id/messageDialogTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/buttonDialogTextView"
        style="@style/bold.subHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/network_validation_error_login_alert_button"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/horizontalLineDialogView" />

</androidx.constraintlayout.widget.ConstraintLayout>